k8s/platform/policy/base/task-api-pod-security.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-api
  labels:
    name: task-api
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/warn-version: latest
